--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,3 +26,11 @@
         transform: translateY(0);
     }
 }
+
+.line-clamp-3 {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    line-clamp: 3;
+    overflow: hidden;
+}
